bad/for_string_over_array.example_compiler_output
ERROR
[1mbad/for_string_over_array.lat:3:18: [1;31merror: [0;1marray element type `int` is not convertible to `string`[m
	for (string x : new int[3]) {}
	                [1;32m^[m
[1mbad/for_string_over_array.lat:3:7: [1;34mnote: [0;1mrequired by here[m
	for (string x : new int[3]) {}
	     [1;32m^[m
